Version 3.1.8     unreleased

	* Add options in util/test.py to get better output from unit tests.
	* Update Python virtualenv setup to work with Python 3.5 and recent pip.
	* Make peer tests safer, by setting a connection timeout so invalid hosts don't hang.

Version 3.1.7     21 Jun 2016

	* Fix typo in cback.1, noticed by Debian's Lintian checks.
	* Fix logging errors with odd paths in tools/amazons3.py when ascii encoding is set.

Version 3.1.6     13 Feb 2016

	* Fix bug in the file encoding checks for the amazons3sync tool.

Version 3.1.5     02 Jan 2016

	* Fix or disable a variety of new warnings and suggestions from pylint.

Version 3.1.4     11 Aug 2015

	* Improvements based on testing in the Debian continuous integration environment.
	  - Make the logging setup process obey the --stack command-line option 
	  - Fix logging setup to always create the log file with the proper specified mode
	  - Fix PurgeItemList.removeYoungFiles() so ageInWholeDays can never be negative
	  - Make filesystemtests more portable, with maximum file path always <= 255 bytes

Version 3.1.1     04 Aug 2015

	* Fix incorrect exception raise without % in util.py, found by accident.
	* Fix cut-and-paste typo 'iplemented' in cli.py, config.py, and util.py.
	* Fix bugs in the ByteQuantity changes from v3.1.0, so comparisons work properly.
	* Adjust amazons3, capacity and split to use ByteQuantity directly, not bytes field.

Version 3.1.0     03 Aug 2015

	* Enhance ByteQuantity so it can be built from and compared to simple numeric values.
	* Improve the way the amazons3 extension deals with byte quantities.
	   - Fix configuration to support quantities like "2.5 GB", as in other extensions
	   - Improve logging using displayBytes(), so displayed quantities are more legible

Version 3.0.2     30 Jul 2015

	* Improvements based on integration testing with my own backup configuration.
	  - Fix problems with pickle by using binary open, protocol=0, fix_imports=True